css/style.css
#home{
	background-image: url("../images/backgrounds/background.jpg") ;
	background-size: cover;
	background-color: rgba(0,0,0,0.25);
}
.navText {
	font-size : 18px;
	margin: 0px;
	margin-top: -15px;
	padding: 0px;
}
.top-container {
	margin-left: 50px;
	margin-right: 50px;
}
nav i{
	margin-top : -10px;
}
nav li a:hover{
	background: white;
	color:black;
	opacity: 1;
}
.active{
	padding-right: 23px;
	padding-left:23px;
	background: white !important;
	color:black;
}
.block {
	margin: 20px;
}

.text {
	color: black;
	font-size: 32px;
}
.center {
	margin-left: auto;
	margin-right:auto;
}
.middle-container {
	min-height: 90vh;
}
.left-block,.right-block {
	padding : 10px;
	color:white;
}
.fcg-text {
	color:white;
}
.center-text {
	text-align: center;
}
.top-block {
	padding : 30px;
}

.damini,.micky {
	height : 220px;
	width : 220px;
	margin-left: auto;
	margin-right: auto;
	padding-left: auto;
	padding-right: auto;
}
.navImg {
	height: 65px;
	width : 100px;
	margin-top : 0px;
}
p {
	font-family: 'EB Garamond', serif;
}

.flow-text {
	font-family: 'EB Garamond', serif !important; 
}
h1,h2,h3,h4,h5 {
		font-family: 'EB Garamond', serif !important; 

}

